# property-price-prediction

./: .gitignore  LICENSE  README.md  interface.ipynb  main.py  pyproject.toml
data/: similar_sales.xlsx
property_price_prediction/: predictor.html  predictor.py
